[tool.poetry]
name = "ssl-daily-check"
version = "0.2.0"
description = "Daily SSL certificate monitoring and checking tool"
authors = ["rtmax0 <rtmax0@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/rtmax0/ssl-daily-check"
repository = "https://github.com/rtmax0/ssl-daily-check"
keywords = ["ssl", "certificate", "daily", "monitoring", "security"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.26.0"
click = "^8.0.3"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ssl-daily-check = "ssl_daily_check.main:cli"
